snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/double-conversion.h.snap
---
source: tests/common/mod.rs
assertion_line: 49
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 543
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 541
    kind: namespace
    spaces:
      - name: DoubleToStringConverter
        start_line: 35
        end_line: 378
        kind: class
        spaces:
          - name: DoubleToStringConverter
            start_line: 107
            end_line: 129
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 8
                total_closures: 0
                average_functions: 8
                average_closures: 0
                total: 8
                average: 8
                functions_min: 8
                functions_max: 8
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 1
                average: 1
                min: 1
                max: 1
              cyclomatic:
                sum: 2
                average: 2
                min: 2
                max: 2
              halstead:
                n1: 12
                N1: 47
                n2: 21
                N2: 32
                length: 79
                estimated_program_length: 135.258
                purity_ratio: 1.712
                vocabulary: 33
                volume: 398.507
                difficulty: 9.143
                level: 0.109
                effort: 3643.494
                time: 202.416
                bugs: 0.079
              loc:
                sloc: 23
                ploc: 21
                lloc: 1
                cloc: 2
                blank: 0
                sloc_average: 23
                ploc_average: 21
                lloc_average: 1
                cloc_average: 2
                blank_average: 0
                sloc_min: 23
                sloc_max: 23
                cloc_min: 2
                cloc_max: 2
                ploc_min: 21
                ploc_max: 21
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 88.609
                mi_sei: 74.394
                mi_visual_studio: 51.818
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
          - name: ToShortest
            start_line: 157
            end_line: 159
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 2
                total_closures: 0
                average_functions: 2
                average_closures: 0
                total: 2
                average: 2
                functions_min: 2
                functions_max: 2
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 1
                average: 1
                min: 1
                max: 1
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
              halstead:
                n1: 8
                N1: 11
                n2: 6
                N2: 8
                length: 19
                estimated_program_length: 39.51
                purity_ratio: 2.079
                vocabulary: 14
                volume: 72.34
                difficulty: 5.333
                level: 0.188
                effort: 385.812
                time: 21.434
                bugs: 0.018
              loc:
                sloc: 3
                ploc: 3
                lloc: 1
                cloc: 0
                blank: 0
                sloc_average: 3
                ploc_average: 3
                lloc_average: 1
                cloc_average: 0
                blank_average: 0
                sloc_min: 3
                sloc_max: 3
                cloc_min: 0
                cloc_max: 0
                ploc_min: 3
                ploc_max: 3
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 130.709
                mi_sei: 112.975
                mi_visual_studio: 76.438
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
          - name: ToShortestSingle
            start_line: 162
            end_line: 164
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 2
                total_closures: 0
                average_functions: 2
                average_closures: 0
                total: 2
                average: 2
                functions_min: 2
                functions_max: 2
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 1
                average: 1
                min: 1
                max: 1
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
              halstead:
                n1: 8
                N1: 11
                n2: 6
                N2: 8
                length: 19
                estimated_program_length: 39.51
                purity_ratio: 2.079
                vocabulary: 14
                volume: 72.34
                difficulty: 5.333
                level: 0.188
                effort: 385.812
                time: 21.434
                bugs: 0.018
              loc:
                sloc: 3
                ploc: 3
                lloc: 1
                cloc: 0
                blank: 0
                sloc_average: 3
                ploc_average: 3
                lloc_average: 1
                cloc_average: 0
                blank_average: 0
                sloc_min: 3
                sloc_max: 3
                cloc_min: 0
                cloc_max: 0
                ploc_min: 3
                ploc_max: 3
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 130.709
                mi_sei: 112.975
                mi_visual_studio: 76.438
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            total_functions: 12
            total_closures: 0
            average_functions: 4
            average_closures: 0
            total: 12
            average: 4
            functions_min: 0
            functions_max: 8
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 2
            average: 0.667
            min: 0
            max: 1
          cognitive:
            sum: 1
            average: 0.333
            min: 0
            max: 1
          cyclomatic:
            sum: 5
            average: 1.25
            min: 1
            max: 2
          halstead:
            n1: 18
            N1: 211
            n2: 71
            N2: 137
            length: 348
            estimated_program_length: 511.691
            purity_ratio: 1.47
            vocabulary: 89
            volume: 2253.555
            difficulty: 17.366
            level: 0.058
            effort: 39135.685
            time: 2174.205
            bugs: 0.384
          loc:
            sloc: 344
            ploc: 90
            lloc: 4
            cloc: 236
            blank: 18
            sloc_average: 86
            ploc_average: 22.5
            lloc_average: 1
            cloc_average: 59
            blank_average: 4.5
            sloc_min: 3
            sloc_max: 23
            cloc_min: 0
            cloc_max: 2
            ploc_min: 3
            ploc_max: 21
            lloc_min: 1
            lloc_max: 1
            blank_min: 0
            blank_max: 0
          nom:
            functions: 3
            closures: 0
            functions_average: 0.75
            closures_average: 0
            total: 3
            average: 0.75
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 35.086
            mi_sei: 23.373
            mi_visual_studio: 20.518
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
      - name: StringToDoubleConverter
        start_line: 381
        end_line: 539
        kind: class
        spaces:
          - name: StringToDoubleConverter
            start_line: 487
            end_line: 497
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 5
                total_closures: 0
                average_functions: 5
                average_closures: 0
                total: 5
                average: 5
                functions_min: 5
                functions_max: 5
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
              halstead:
                n1: 8
                N1: 23
                n2: 11
                N2: 16
                length: 39
                estimated_program_length: 62.054
                purity_ratio: 1.591
                vocabulary: 19
                volume: 165.669
                difficulty: 5.818
                level: 0.172
                effort: 963.893
                time: 53.55
                bugs: 0.033
              loc:
                sloc: 11
                ploc: 11
                lloc: 0
                cloc: 0
                blank: 0
                sloc_average: 11
                ploc_average: 11
                lloc_average: 0
                cloc_average: 0
                blank_average: 0
                sloc_min: 11
                sloc_max: 11
                cloc_min: 0
                cloc_max: 0
                ploc_min: 11
                ploc_max: 11
                lloc_min: 0
                lloc_max: 0
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 105.352
                mi_sei: 76.392
                mi_visual_studio: 61.609
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            total_functions: 5
            total_closures: 0
            average_functions: 5
            average_closures: 0
            total: 5
            average: 5
            functions_min: 0
            functions_max: 5
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 2
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 14
            N1: 105
            n2: 37
            N2: 64
            length: 169
            estimated_program_length: 246.053
            purity_ratio: 1.456
            vocabulary: 51
            volume: 958.64
            difficulty: 12.108
            level: 0.083
            effort: 11607.315
            time: 644.851
            bugs: 0.171
          loc:
            sloc: 159
            ploc: 47
            lloc: 2
            cloc: 104
            blank: 8
            sloc_average: 79.5
            ploc_average: 23.5
            lloc_average: 1
            cloc_average: 52
            blank_average: 4
            sloc_min: 11
            sloc_max: 11
            cloc_min: 0
            cloc_max: 0
            ploc_min: 11
            ploc_max: 11
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 0.5
            closures_average: 0
            total: 1
            average: 0.5
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 52.723
            mi_sei: 48.061
            mi_visual_studio: 30.832
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 17
        total_closures: 0
        average_functions: 4.25
        average_closures: 0
        total: 17
        average: 4.25
        functions_min: 0
        functions_max: 8
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 2
        average: 0.5
        min: 0
        max: 1
      cognitive:
        sum: 1
        average: 0.25
        min: 0
        max: 1
      cyclomatic:
        sum: 8
        average: 1.143
        min: 1
        max: 2
      halstead:
        n1: 20
        N1: 319
        n2: 93
        N2: 202
        length: 521
        estimated_program_length: 694.58
        purity_ratio: 1.333
        vocabulary: 113
        volume: 3553.313
        difficulty: 21.72
        level: 0.046
        effort: 77179.492
        time: 4287.75
        bugs: 0.604
      loc:
        sloc: 509
        ploc: 139
        lloc: 6
        cloc: 340
        blank: 30
        sloc_average: 72.714
        ploc_average: 19.857
        lloc_average: 0.857
        cloc_average: 48.571
        blank_average: 4.286
        sloc_min: 159
        sloc_max: 344
        cloc_min: 104
        cloc_max: 236
        ploc_min: 47
        ploc_max: 90
        lloc_min: 2
        lloc_max: 4
        blank_min: 8
        blank_max: 18
      nom:
        functions: 4
        closures: 0
        functions_average: 0.571
        closures_average: 0
        total: 4
        average: 0.571
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 25.681
        mi_sei: 9.861
        mi_visual_studio: 15.018
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 17
    total_closures: 0
    average_functions: 4.25
    average_closures: 0
    total: 17
    average: 4.25
    functions_min: 0
    functions_max: 8
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 2
    average: 0.5
    min: 0
    max: 1
  cognitive:
    sum: 1
    average: 0.25
    min: 0
    max: 1
  cyclomatic:
    sum: 9
    average: 1.125
    min: 1
    max: 2
  halstead:
    n1: 20
    N1: 319
    n2: 95
    N2: 205
    length: 524
    estimated_program_length: 710.575
    purity_ratio: 1.356
    vocabulary: 115
    volume: 3587.037
    difficulty: 21.579
    level: 0.046
    effort: 77404.478
    time: 4300.249
    bugs: 0.605
  loc:
    sloc: 543
    ploc: 143
    lloc: 6
    cloc: 368
    blank: 34
    sloc_average: 67.875
    ploc_average: 17.875
    lloc_average: 0.75
    cloc_average: 46
    blank_average: 4.25
    sloc_min: 509
    sloc_max: 509
    cloc_min: 340
    cloc_max: 340
    ploc_min: 139
    ploc_max: 139
    lloc_min: 6
    lloc_max: 6
    blank_min: 30
    blank_max: 30
  nom:
    functions: 4
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 4
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 24.354
    mi_sei: 8.185
    mi_visual_studio: 14.242
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
