snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/fast-dtoa.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 88
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 86
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 29
        unique_operands: 17
        total_operands: 18
        length: 47
        estimated_program_length: 117.593
        purity_ratio: 2.502
        vocabulary: 30
        volume: 230.624
        difficulty: 6.882
        level: 0.145
        effort: 1587.235
        time: 88.18
        bugs: 0.045
      loc:
        sloc: 54
        ploc: 15
        lloc: 3
        cloc: 35
        blank: 4
        sloc_average: 54
        ploc_average: 15
        lloc_average: 3
        cloc_average: 35
        blank_average: 4
        sloc_min: 54
        sloc_max: 54
        cloc_min: 35
        cloc_max: 35
        ploc_min: 15
        ploc_max: 15
        lloc_min: 3
        lloc_max: 3
        blank_min: 4
        blank_max: 4
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 55
        average: 55
        min: 55
        max: 55
      mi:
        original: 77.856
        sei: 32.022
        visual_studio: 45.53
      abc:
        assignments: 2
        branches: 0
        conditions: 0
        magnitude: 2
        value: 2
        assignments_average: 2
        branches_average: 0
        conditions_average: 0
        assignments_min: 2
        assignments_max: 2
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 13
    total_operators: 29
    unique_operands: 19
    total_operands: 21
    length: 50
    estimated_program_length: 128.816
    purity_ratio: 2.576
    vocabulary: 32
    volume: 250
    difficulty: 7.184
    level: 0.139
    effort: 1796.053
    time: 99.781
    bugs: 0.049
  loc:
    sloc: 88
    ploc: 19
    lloc: 3
    cloc: 63
    blank: 8
    sloc_average: 44
    ploc_average: 9.5
    lloc_average: 1.5
    cloc_average: 31.5
    blank_average: 4
    sloc_min: 54
    sloc_max: 88
    cloc_min: 35
    cloc_max: 63
    ploc_min: 15
    ploc_max: 19
    lloc_min: 3
    lloc_max: 3
    blank_min: 4
    blank_max: 8
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 64
    average: 32
    min: 9
    max: 55
  mi:
    original: 69.296
    sei: 50.249
    visual_studio: 40.524
  abc:
    assignments: 2
    branches: 0
    conditions: 0
    magnitude: 2
    value: 0
    assignments_average: 1
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 2
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
