snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/fixed-dtoa.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 56
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 54
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 18
        unique_operands: 8
        total_operands: 8
        length: 26
        estimated_program_length: 67.02
        purity_ratio: 2.578
        vocabulary: 20
        volume: 112.37
        difficulty: 6
        level: 0.167
        effort: 674.221
        time: 37.457
        bugs: 0.026
      loc:
        sloc: 22
        ploc: 4
        lloc: 1
        cloc: 16
        blank: 2
        sloc_average: 22
        ploc_average: 4
        lloc_average: 1
        cloc_average: 16
        blank_average: 2
        sloc_min: 22
        sloc_max: 22
        cloc_min: 16
        cloc_max: 16
        ploc_min: 4
        ploc_max: 4
        lloc_min: 1
        lloc_max: 1
        blank_min: 2
        blank_max: 2
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 28
        average: 28
        min: 28
        max: 28
      mi:
        original: 96.142
        sei: 93.172
        visual_studio: 56.223
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 12
    total_operators: 18
    unique_operands: 10
    total_operands: 11
    length: 29
    estimated_program_length: 76.239
    purity_ratio: 2.629
    vocabulary: 22
    volume: 129.324
    difficulty: 6.6
    level: 0.152
    effort: 853.535
    time: 47.419
    bugs: 0.03
  loc:
    sloc: 56
    ploc: 8
    lloc: 1
    cloc: 44
    blank: 6
    sloc_average: 28
    ploc_average: 4
    lloc_average: 0.5
    cloc_average: 22
    blank_average: 3
    sloc_min: 22
    sloc_max: 56
    cloc_min: 16
    cloc_max: 44
    ploc_min: 4
    ploc_max: 8
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 6
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 37
    average: 18.5
    min: 9
    max: 28
  mi:
    original: 80.045
    sei: 85.938
    visual_studio: 46.81
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
