snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/strtod.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 45
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 43
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 16
        unique_operands: 6
        total_operands: 9
        length: 25
        estimated_program_length: 48.729
        purity_ratio: 1.949
        vocabulary: 16
        volume: 100
        difficulty: 7.5
        level: 0.133
        effort: 750
        time: 41.667
        bugs: 0.028
      loc:
        sloc: 11
        ploc: 4
        lloc: 2
        cloc: 4
        blank: 3
        sloc_average: 11
        ploc_average: 4
        lloc_average: 2
        cloc_average: 4
        blank_average: 3
        sloc_min: 11
        sloc_max: 11
        cloc_min: 4
        cloc_max: 4
        ploc_min: 4
        ploc_max: 4
        lloc_min: 2
        lloc_max: 2
        blank_min: 3
        blank_max: 3
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 32
        average: 32
        min: 32
        max: 32
      mi:
        original: 107.977
        sei: 84.314
        visual_studio: 63.145
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 10
    total_operators: 16
    unique_operands: 8
    total_operands: 12
    length: 28
    estimated_program_length: 57.219
    purity_ratio: 2.044
    vocabulary: 18
    volume: 116.758
    difficulty: 7.5
    level: 0.133
    effort: 875.684
    time: 48.649
    bugs: 0.031
  loc:
    sloc: 45
    ploc: 8
    lloc: 2
    cloc: 32
    blank: 7
    sloc_average: 22.5
    ploc_average: 4
    lloc_average: 1
    cloc_average: 16
    blank_average: 3.5
    sloc_min: 11
    sloc_max: 45
    cloc_min: 4
    cloc_max: 32
    ploc_min: 4
    ploc_max: 8
    lloc_min: 2
    lloc_max: 2
    blank_min: 3
    blank_max: 7
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 41
    average: 20.5
    min: 9
    max: 32
  mi:
    original: 84.12
    sei: 69.726
    visual_studio: 49.193
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
